MFB: Fixed bug #39846 (Invalid IPv4 treated as valid).